backend/src/tests/fixtures/photos/negative/photoRegex.fixture.ts
export default {
  settings: {
    aperture: 'a/1.2',
    focalLength: '100nn',
    iso: 'string',
    shutterSpeed: '1.200',
  },
  storeUrl: 'http://www.futos',
};
